more spacing on the fixed sidebar

--- a/app/assets/stylesheets/components/_sidebar.sass
+++ b/app/assets/stylesheets/components/_sidebar.sass
@@ -15,4 +15,4 @@
   @media screen and (min-height: 700px)
     & > .content
       position: sticky
-      top: calc((var(--gutter)/2) + 4.32rem)
+      top: 7.25rem
